# PromptBridge

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  AGENTS.md  Package.swift  README.md  pyproject.toml
Sources/PromptBridgeCore/: ReplacementCoordinator.swift
Sources/PromptBridgeHotkey/: main.swift
Sources/PromptBridgePlatform/: GlobalHotKey.swift  MacOSSelectionSystem.swift  ProcessPromptEngine.swift
docs/: AGENTS.md  index.md  status.md
docs/architecture/: clipboard-state-machine.md  preservation-validator.md  prompt-pipeline.md  system-overview.md
docs/decisions/: ADR-0001-local-first.md  ADR-0002-ollama-mvp.md
docs/development/: agent-skills.md  code-style.md  commit-convention.md  pre-commit.md  testing.md
docs/evaluation/: compatibility-matrix.md  methodology.md  model-comparison.md
docs/policies/: failure-policy.md  privacy-boundary.md
docs/product/: invariants.md  overview.md  terminology.md
docs/roadmap/: index.md  phase-1-quality-validation.md  phase-2-preservation-validator.md  phase-3-hotkey-prototype.md  phase-4-macos-application.md  phase-5-refine-mode.md  phase-6-quality-improvements.md
docs/transformation/: protected-elements.md  refine-mode.md  translate-mode.md
evaluation/configs/: phase1-v1.json
evaluation/datasets/: translate-v1.json
evaluation/prompts/: translate-v1.txt
evaluation/results/: phase1-apple-m5-2026-07-16.json
scripts/: run_evaluation.py  validate_docs.py
src/promptbridge/: __init__.py  cli.py  (+2 more)
tests/: test_evaluation.py  test_preservation.py  test_runtime.py
(+10 files in other folders)
