[project]
name = "promptbridge"
version = "0.0.0"
description = "Developer-aware Korean-to-English prompt transformation for macOS"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "commitizen==4.16.4",
    "pre-commit==4.6.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".build",
    "DerivedData",
    "build",
]

[tool.ruff.lint]
select = [
    "B",
    "D",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
